--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
        />
     
       <TextView
+         android:textSize="40sp"
           android:textColor="@android:color/holo_orange_dark"
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
